# eventide-h9-control

./: AGENTS.md  INSTALL_RASPBERRY_PI.md  config.example-with-gpio.json  config.json  main.py  midi.py  pyproject.toml  readme.md  test.py  ui_main.py
.github/: copilot-instructions.md
.github/instructions/: code.instructions.md  python.instructions.md
documentation/: h9-sysex.md  shortcuts-configuration.md
h9control/: __init__.py  logging_setup.py
h9control/app/: config.py  h9_backend.py  preset_jump.py  state.py  theme.py
h9control/app/ui/: qt_dashboard.py  qt_settings.py  qt_worker.py
h9control/audio/: beat_detector.py
h9control/domain/: algorithms.py  knob_display.py  preset.py
h9control/hardware/: backlight.py
h9control/protocol/: codes.py  h9_protocol.py  sysex.py
h9control/transport/: gpio_input.py  midi_transport.py
linux/: h9-control.service  install.sh  start-app.sh
scripts/: README_USB_DIAGNOSTICS.md  auto_recovery_audio.py  sounddevice_audio_test.py  test_beat_detector.py  test_delay_cc.py  usb_audio_diagnostics.py
