[project]
name = "eventide-h9-control"
version = "0.1.0"
description = "A Qt UI for the Eventide H9 effects unit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aubio>=0.4.9",
    "gpiozero>=2.0.1",
    "mido>=1.3.3",
    "numpy>=2.4.0",
    "pyaudio>=0.2.14",
    "pyside6>=6.10.1",
    "python-rtmidi>=1.5.8",
]
