[project]
name = "eventide-h9-control"
version = "0.1.0"
description = "A Qt UI for the Eventide H9 effects unit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aubio>=0.4.9",
    "gpiozero>=2.0.1",
    "mido>=1.3.3",
    "numpy>=2.4.0",
    "pyaudio>=0.2.14",
    # PySide6 pinned to 6.8.x for Raspberry Pi ARM64 compatibility (glibc 2.36).
    # v6.10+ requires glibc 2.39, unavailable on Raspberry Pi OS.
    # v6.7+ required for modern enum syntax (Qt.Alignment.AlignCenter).
    "pyside6~=6.8.0",
    "python-rtmidi>=1.5.8",
]

[project.scripts]
h9-control = "ui_main:main"
h9-control-cli = "main:main"
