[project]
name = "eventide-h9-control"
version = "0.1.0"
description = "A Qt UI for the Eventide H9 effects unit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0; sys_platform == 'linux'",
    "librosa>=0.10.2",
    "mido>=1.3.3",
    "numba>=0.59",
    "numpy>=1.24,<2.4",
    "pyaudio>=0.2.14",
    # PySide6 pinned to 6.7.x for Raspberry Pi ARM64 compatibility.
    # v6.8+ requires glibc 2.39, unavailable on Raspberry Pi OS.
    # v6.7 has manylinux_2_28 wheels, compatible with Raspberry Pi OS.
    "pyside6~=6.7.0",
    "python-rtmidi>=1.5.8",
]

[project.scripts]
h9-control = "ui_main:main"
h9-control-cli = "main:main"
